mainPage heading Spacing Fixed

--- a/src/TT/Portfolio/Portfolio_MainPage/PT_jumbo1/PT_jumbo1.css
+++ b/src/TT/Portfolio/Portfolio_MainPage/PT_jumbo1/PT_jumbo1.css
@@ -1,5 +1,5 @@
 .PTJM1_main{
-    background-image: url(../../../../images/portf.jpg) !important;
+    background-image: url(../../../../images/port2.jpg) !important;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -12,7 +12,7 @@
 }
 .mainCont{
     width: auto;
-    height: 70vh;
+    height: 60vh;
 }
 .PTJM1_main_Header{
     
